--- a/src/sass/components/_goods-list.sass
+++ b/src/sass/components/_goods-list.sass
@@ -196,13 +196,18 @@ $product-figure-right-space: 20px
 
 .goods__title
 	width: 20%
-	min-width: 300px
 	+font-alt-bold
 	padding-right: 40px
 	+font(16px, 19px)
 	letter-spacing: normal
 	transition-property: color
 	transition-duration: $animation-speed
+
+	+media('<desk-lg')
+		width: 30%
+
+	+media('<desk-md')
+		width: 40%
 
 	a
 		text-decoration: none
@@ -221,6 +226,15 @@ $product-figure-right-space: 20px
 
 	& > *:last-child
 		margin-bottom: 0
+
+	+media('<desk-lg')
+		width: 69%
+
+	+media('<desk-md')
+		width: 59%
+
+.goods__footer
+	text-align: center
 
 // для маленьких мониторов
 +media('<tab-lg')
