--- a/src/sass/components/_buttons.sass
+++ b/src/sass/components/_buttons.sass
@@ -215,6 +215,31 @@
 		text-align: left
 		white-space: normal
 
+// btn-with-arrow
+.btn-with-arrow
+	& > i, & > span
+		+display-inline-block-middle
+
+	& > i
+		position: relative
+		margin-left: 10px
+		+font(0, 0)
+		width: 30px
+		height: 2px
+		background-color: $text-color
+
+		&::after
+			content: ""
+			position: absolute
+			left: 100%
+			top: 50%
+			margin: -6px 0 0 -4px
+			+triangle(right, #{$text-color}, 6px, 1)
+
+	& > span
+		text-align: left
+		white-space: normal
+
 /* button to site
 .btn-siblings
 	+display-inline-block-top
@@ -496,6 +521,56 @@ $btn-menu-lines-color: $text-color !default
 	background-color: white
 
 /*button popup close end*/
+
+/* button catalog menu toggle
+.btn-catalog
+	display: none // скрывать на больших экранах
+	padding: 13px #{$text-layout-space-horizontal--md}
+	margin-top: $bottom-space
+	+font-bold
+	+font(18px, 24px)
+	white-space: nowrap
+	text-decoration: none
+	color: black
+	text-transform: uppercase
+	text-align: center
+	background-color: $base-color
+
+	.ea-site &
+		background-color: $base-color--ea
+
+	+media('<desk-md')
+		.ea-site &
+			+margin-horizontal($text-layout-space-horizontal--lg)
+			display: block
+
+	+media('<tab-lg')
+		&, .ea-site &
+			display: block
+			+margin-horizontal(0)
+			margin-top: 0
+
+	&::before
+		+pseudo-inline-block-relative()
+		vertical-align: top
+		+size(16px, 16px)
+		margin: 3px 15px -3px 0
+		+font(0, 0)
+		background-image: linear-gradient(to right, transparent 0%, transparent 66.6%, #{$base-color} 66.6%, #{$base-color} 100%), linear-gradient(to bottom, black 0%, black 66.6%, #{$base-color} 66.6%, #{$base-color} 100%)
+		background-size: 6px 4px, 4px 6px
+
+		.ea-site &
+			background-image: linear-gradient(to right, transparent 0%, transparent 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%), linear-gradient(to bottom, black 0%, black 66.6%, #{$base-color--ea} 66.6%, #{$base-color--ea} 100%)
+
+	& > span
+		+display-inline-block-top
+		white-space: normal
+		text-align: left
+
+//&:active
+	transform: translate(0, 2px)
+
+/* button catalog menu toggle
 
 /*view print*/
 .view-print
