--- a/src/sass/partials/_sidebar.sass
+++ b/src/sass/partials/_sidebar.sass
@@ -11,25 +11,33 @@
 	//width: $sidebar-width
 	width: $sidebar-drop-width
 	background-color: $base-color
-	z-index: 991
+	z-index: 999
 	user-select: none
-	transform: translate(#{$sidebar-drop-width - $sidebar-width}, 0)
-	transition-property: transform
-	transition-duration: $animation-speed
-	transition-delay: 0.2s
 
-	&:hover, &:focus
+	+media('>=tab-lg')
+		visibility: inherit !important
+		opacity: 1 !important
+		transform: matrix(1, 0, 0, 1, 0, 0) translate(#{$sidebar-drop-width - $sidebar-width}, 0) !important
+		//transform: translate(#{$sidebar-drop-width - $sidebar-width}, 0) !important
+		transition-property: transform !important
+		transition-duration: $animation-speed !important
+		transition-delay: 0.2s !important
+
+		&:hover, &:focus
+			transform: translate(0, 0) !important
+			transition-delay: 0s !important
+
+	+media('<tab-lg')
+		width: 100%
+		opacity: 0
+		visibility: hidden
 		transform: translate(0, 0)
-		transition-delay: 0s
-
-	+media('<desk-md')
-		display: none
 
 	.side-menu--alt &
 		width: $sidebar-width--lg
 		overflow-x: hidden
 		overflow-y: auto
-		transform: none
+		transform: none !important
 
 	.v-middle__row
 		&:first-child, &:last-child
@@ -41,6 +49,9 @@
 
 .side-menu__align
 	width: #{$sidebar-drop-width + 100px}
+
+	+media('<tab-lg')
+		width: auto
 
 .side-menu__holder
 	position: relative
@@ -55,6 +66,9 @@
 		//top: auto
 		//transform: none
 
+	+media('<tab-lg')
+		justify-content: flex-start
+
 .side-menu__row
 	display: block
 	margin-top: -1px
@@ -62,6 +76,9 @@
 	border-width: 1px 0
 	position: relative
 	width: $sidebar-drop-width
+
+	+media('<tab-lg')
+		width: auto
 
 	.side-menu--alt &
 		display: table-row
@@ -76,20 +93,28 @@
 		border-color: black
 		z-index: 5
 
+		+media('<tab-lg')
+			border-color: $side-menu-bg-color-hover
+
 .side-menu__cell
+	position: relative
 	display: block
-	//position: absolute
-	//+position(0, 100%)
 	+size(auto, 100%)
 	color: $text-color
 	+clear-spacing
 	text-decoration: none
-	background-color: $base-color
 	transition-property: background-color, transform
 	transition-duration: $animation-speed
 
-	.no-touchevents &:hover
-		background-color: $side-menu-bg-color-hover
+	a
+		display: block
+		height: 100%
+		text-decoration: none
+		color: inherit
+		background-color: $base-color
+
+		.no-touchevents &:hover
+			background-color: $side-menu-bg-color-hover
 
 	.side-menu--alt &
 		&, .no-touchevents &
@@ -106,8 +131,13 @@
 
 	.current &
 		&, .no-touchevents &
-			background-color: black
-			color: white
+			a
+				background-color: black
+				color: white
+
+				+media('<tab-lg')
+					background-color: $base-color
+					color: black
 
 .side-menu__hover // стиль ховеров для главной страницы
 
@@ -181,6 +211,9 @@
 		.current &
 			fill: white
 
+			+media('<tab-lg')
+				fill: black
+
 	//img
 		position: absolute
 		left: 50%
@@ -233,6 +266,11 @@
 	.no-touchevents .side-menu--alt .side-menu__cell:hover &
 		color: white
 
+	+media('<tab-lg')
+		opacity: 1
+		transform: none
+		width: calc(100% - #{$catalog-menu-arrow-size} - #{$sidebar-width} - 20px)
+
 /* side menu drop
 .side-menu-drop
 	$item-height: 36px
@@ -262,6 +300,13 @@
 		bottom: #{$item-height - 5px}
 		margin-left: -5px
 
+	+media('<tab-lg')
+		padding-bottom: 0
+		background-color: #333
+
+		&::before, &::after
+			content: none
+
 	ul
 		position: relative
 		list-style: none
@@ -277,6 +322,14 @@
 			+size(0, 100%)
 			border-left: 1px solid #666
 			pointer-events: none
+
+		+media('<tab-lg')
+			padding: 10px 0
+			+font-bold
+			+font(16px, 19px)
+
+			&::before
+				content: none
 
 	li
 		//counter-increment: item
@@ -321,6 +374,12 @@
 				opacity: 0
 				visibility: hidden
 				transform: translate(10px, 0)
+
+		+media('<tab-lg')
+			height: auto
+
+			&::before, &::after
+				content: none
 
 	a
 		display: block
@@ -382,6 +441,27 @@
 				opacity: 1
 				visibility: visible
 				transform: translate(0, 0)
+
+		+media('<tab-lg')
+			&
+				padding: 0 20px
+
+				&::before
+					content: ""
+					position: relative
+					left: auto
+					top: auto
+					margin: 0
+					+display-inline-block-middle
+					width: 0
+					height: 50px
+
+				& > span
+					+display-inline-block-middle
+					opacity: 1
+					visibility: visible
+					transform: none
+					width: calc(100% - 5px)
 
 /* side menu drop end
 
