--- a/src/sass/components/_v-middle.sass
+++ b/src/sass/components/_v-middle.sass
@@ -4,7 +4,7 @@
 
 /* v-middle
 .v-middle
-	overflow: hidden // необходим для скрытия скролла
+	//overflow: hidden // необходим для скрытия скролла, если нет overflow: hidden на родительских элементах
 
 .v-middle__align
 	//width: calc(100% + 100px)
