--- a/src/sass/components/_sliders.sass
+++ b/src/sass/components/_sliders.sass
@@ -13,7 +13,7 @@
 	border-radius: 0
 	background: none
 	outline: none
-	box-shadow: 0
+	box-shadow: none
 	opacity: 1
 	z-index: 6
 	transition-property: background, opacity, visibility
